Update 第三周 栈结构 测验.md

--- a/第三周 栈结构 测验.md
+++ b/第三周 栈结构 测验.md
@@ -19,7 +19,7 @@
   - **C**. 5 3 - 2 4 + *
   - **D**. 5 3 2 * - 4 +
 ---
-- **3** `单选` (2分)‍ 给定后缀表达式`36 + 52 - /`求值结果为？
+- **3** `单选` (2分)‍ 给定后缀表达式`3 6 + 5 2 - /`求值结果为？
   - **A**. 4
   - **B**. 10
   - **C**. 6
